# Kairos

./: .gitignore  README.md
backend/: README.md  pyproject.toml  run_dev.py  test_phase2.py
backend/src/: main.py
backend/src/api/: diagnostics.py  jobs.py  settings.py
backend/src/database/: __init__.py  engine.py  models.py
backend/src/nlp/: __init__.py  ats_scorer.py
backend/src/scraper/: README.md  engine.py  internshala_worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/renderer/: App.tsx
