[project]
name = "kairos-backend"
version = "0.1.0"
description = "Kairos AI Career Architect Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "sqlmodel>=0.0.22",
    "instructor>=1.6.3",
    "ollama>=0.3.3",
    "spacy>=3.7.5",
    "beautifulsoup4>=4.12.3",
    "psutil>=6.0.0",
    "gputil>=1.4.0",
    "playwright>=1.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/core", "src/database", "src/nlp", "src/services"]
